--- a/asteroids.css
+++ b/asteroids.css
@@ -10,6 +10,7 @@ body {
   font-family: 'ZenDots';
   /* font-family: 'PressStart2P'; */
   color: #fff;
+  background: url('assets/images/background3.jpg');
 }
 
 canvas {
@@ -22,5 +23,5 @@ img {
 
 .main-container {
   width: 700px;
-  margin: 21px auto 0 auto;
+  margin: 40px auto 0 auto;
 }
